--- a/Shoptask1720/Shoptask1720.ini
+++ b/Shoptask1720/Shoptask1720.ini
@@ -19,6 +19,7 @@ INTRO_GRAPHIC = linuxcnc.gif
 INTRO_TIME = 5
 PROGRAM_PREFIX = /home/pi/linuxcnc/nc_files
 INCREMENTS = .1in .05in .01in .005in .001in .0005in .0001in
+LATHE = 1
 POSITION_FEEDBACK = COMMANDED
 DEFAULT_LINEAR_VELOCITY = 0.250000
 MAX_LINEAR_VELOCITY = 1.000000
@@ -63,11 +64,11 @@ SHUTDOWN = shutdown.hal
 [HALUI]
 
 [KINS]
-JOINTS = 3
-KINEMATICS = trivkins coordinates=XYZ
+JOINTS = 2
+KINEMATICS = trivkins coordinates=XZ
 
 [TRAJ]
-COORDINATES =  XYZ
+COORDINATES =  XZ
 LINEAR_UNITS = inch
 ANGULAR_UNITS = degree
 DEFAULT_LINEAR_VELOCITY = 0.10
@@ -79,11 +80,50 @@ CYCLE_TIME = 0.100
 TOOL_TABLE = tool.tbl
 
 #******************************************
+[AXIS_Z]
+MAX_VELOCITY = 0.5
+MAX_ACCELERATION = 6.0
+MIN_LIMIT = -15.000
+MAX_LIMIT = 0.0
+
+[JOINT_1]
+TYPE = LINEAR
+HOME = 0.0
+FERROR = 0.5
+MIN_FERROR = 0.05
+MAX_VELOCITY = 0.5
+MAX_ACCELERATION = 6.0
+# The values below should be 25% larger than MAX_VELOCITY and MAX_ACCELERATION
+# If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
+STEPGEN_MAXVEL = 0.625
+STEPGEN_MAXACCEL = 12
+P = 50
+I = 0
+D = 0
+FF0 = 0
+FF1 = 1
+FF2 = 0
+BIAS = 0
+DEADBAND = 0.0003
+MAX_OUTPUT = 0
+ENCODER_SCALE = 5080
+# these are in nanoseconds
+DIRSETUP   = 10000
+DIRHOLD    = 10000
+STEPLEN    = 5000
+STEPSPACE  = 5000
+STEP_SCALE = 32000
+MIN_LIMIT = -15.00
+MAX_LIMIT = 0.0
+HOME_OFFSET = 0.0
+#******************************************
+
+#******************************************
 [AXIS_X]
 MAX_VELOCITY = 0.5
 MAX_ACCELERATION = 6.0
-MIN_LIMIT = -0.000
-MAX_LIMIT = 15.0
+MIN_LIMIT = -10.000
+MAX_LIMIT = 0.0
 
 [JOINT_0]
 TYPE = LINEAR
@@ -112,85 +152,8 @@ DIRHOLD    = 10000
 STEPLEN    = 5000
 STEPSPACE  = 5000
 STEP_SCALE = -32000
-MIN_LIMIT = -0.001
-MAX_LIMIT = 15.0
+MIN_LIMIT = -10.000
+MAX_LIMIT = 0.0
 HOME_OFFSET = 0.0
 #******************************************
 
-#******************************************
-[AXIS_Y]
-MAX_VELOCITY = 0.5
-MAX_ACCELERATION = 6.0
-MIN_LIMIT = -0.000
-MAX_LIMIT = 10.0
-
-[JOINT_1]
-TYPE = LINEAR
-HOME = 0.0
-FERROR = 0.5
-MIN_FERROR = 0.05
-MAX_VELOCITY = 0.5
-MAX_ACCELERATION = 6.0
-# The values below should be 25% larger than MAX_VELOCITY and MAX_ACCELERATION
-# If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
-STEPGEN_MAXVEL = 0.625
-STEPGEN_MAXACCEL = 12
-P = 50
-I = 0
-D = 0
-FF0 = 0
-FF1 = 1
-FF2 = 0
-BIAS = 0
-DEADBAND = 0.0003
-MAX_OUTPUT = 0
-ENCODER_SCALE = -5080
-# these are in nanoseconds
-DIRSETUP   = 10000
-DIRHOLD    = 10000
-STEPLEN    = 5000
-STEPSPACE  = 5000
-STEP_SCALE = -32000
-MIN_LIMIT = -0.000
-MAX_LIMIT = 10.0
-HOME_OFFSET = 0.0
-#******************************************
-
-#******************************************
-[AXIS_Z]
-MAX_VELOCITY = 0.5
-MAX_ACCELERATION = 6.0
-MIN_LIMIT = -3.1
-MAX_LIMIT = 0.000
-
-[JOINT_2]
-TYPE = LINEAR
-HOME = 0.0
-FERROR = 0.5
-MIN_FERROR = 0.05
-MAX_VELOCITY = 0.5
-MAX_ACCELERATION = 6.0
-# The values below should be 25% larger than MAX_VELOCITY and MAX_ACCELERATION
-# If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
-STEPGEN_MAXVEL = 0.625
-STEPGEN_MAXACCEL = 12
-P = 50
-I = 0
-D = 0
-FF0 = 0
-FF1 = 1
-FF2 = 0
-BIAS = 0
-DEADBAND = 0.0003
-MAX_OUTPUT = 0
-ENCODER_SCALE = 5080
-# these are in nanoseconds
-DIRSETUP   = 10000
-DIRHOLD    = 10000
-STEPLEN    = 5000
-STEPSPACE  = 5000
-STEP_SCALE = -21333.33
-MIN_LIMIT = -3.1
-MAX_LIMIT = 0.001
-HOME_OFFSET = 0.0
-#******************************************
