--- a/Shoptask1720/Shoptask1720.ini
+++ b/Shoptask1720/Shoptask1720.ini
@@ -11,7 +11,7 @@ VERSION = 1.1
 [DISPLAY]
 DISPLAY = gmoccapy
 POSITION_OFFSET = RELATIVE
-POSITION_FEEDBACK = COMMANDED
+POSITION_FEEDBACK = ACTUAL
 MAX_FEED_OVERRIDE = 2.000000
 MAX_SPINDLE_OVERRIDE = 1.000000
 MIN_SPINDLE_OVERRIDE = 0.500000
@@ -83,8 +83,8 @@ TOOL_TABLE = tool.tbl
 [AXIS_Z]
 MAX_VELOCITY = 0.5
 MAX_ACCELERATION = 6.0
-MIN_LIMIT = -15.000
-MAX_LIMIT = 0.0
+MIN_LIMIT = -10.000
+MAX_LIMIT = 5.0
 
 [JOINT_1]
 TYPE = LINEAR
@@ -113,8 +113,8 @@ DIRHOLD    = 10000
 STEPLEN    = 5000
 STEPSPACE  = 5000
 STEP_SCALE = 32000
-MIN_LIMIT = -15.00
-MAX_LIMIT = 0.0
+MIN_LIMIT = -10.00
+MAX_LIMIT = 5.0
 HOME_OFFSET = 0.0
 #******************************************
 
@@ -122,8 +122,8 @@ HOME_OFFSET = 0.0
 [AXIS_X]
 MAX_VELOCITY = 0.5
 MAX_ACCELERATION = 6.0
-MIN_LIMIT = -10.000
-MAX_LIMIT = 0.0
+MIN_LIMIT = -5.000
+MAX_LIMIT = 5.0
 
 [JOINT_0]
 TYPE = LINEAR
@@ -152,8 +152,8 @@ DIRHOLD    = 10000
 STEPLEN    = 5000
 STEPSPACE  = 5000
 STEP_SCALE = -32000
-MIN_LIMIT = -10.000
-MAX_LIMIT = 0.0
+MIN_LIMIT = -5.000
+MAX_LIMIT = 5.0
 HOME_OFFSET = 0.0
 #******************************************
 
