--- a/Shoptask1720/Shoptask1720.ini
+++ b/Shoptask1720/Shoptask1720.ini
@@ -11,7 +11,7 @@ VERSION = 1.1
 [DISPLAY]
 DISPLAY = gmoccapy
 POSITION_OFFSET = RELATIVE
-POSITION_FEEDBACK = COMMANDED
+POSITION_FEEDBACK = ACTUAL
 MAX_FEED_OVERRIDE = 2.000000
 MAX_SPINDLE_OVERRIDE = 1.000000
 MIN_SPINDLE_OVERRIDE = 0.500000
