--- a/Shoptask1720/Shoptask1720.ini
+++ b/Shoptask1720/Shoptask1720.ini
@@ -17,10 +17,9 @@ MAX_SPINDLE_OVERRIDE = 1.000000
 MIN_SPINDLE_OVERRIDE = 0.500000
 INTRO_GRAPHIC = linuxcnc.gif
 INTRO_TIME = 5
-PROGRAM_PREFIX = /home/pi/linuxcnc/nc_files
-INCREMENTS = .1in .05in .01in .005in .001in .0005in .0001in
+PROGRAM_PREFIX = /media/pi/GCODE
+INCREMENTS = .1in .05in .01in .005in .001in .0002in
 LATHE = 1
-POSITION_FEEDBACK = COMMANDED
 DEFAULT_LINEAR_VELOCITY = 0.250000
 MAX_LINEAR_VELOCITY = 1.000000
 MIN_LINEAR_VELOCITY = 0.016670
@@ -83,8 +82,8 @@ TOOL_TABLE = tool.tbl
 [AXIS_Z]
 MAX_VELOCITY = 0.5
 MAX_ACCELERATION = 6.0
-MIN_LIMIT = -10.000
-MAX_LIMIT = 5.0
+MIN_LIMIT = -7.5000
+MAX_LIMIT = 7.50
 
 [JOINT_1]
 TYPE = LINEAR
@@ -113,9 +112,10 @@ DIRHOLD    = 10000
 STEPLEN    = 5000
 STEPSPACE  = 5000
 STEP_SCALE = 32000
-MIN_LIMIT = -10.00
-MAX_LIMIT = 5.0
+MIN_LIMIT = -7.50
+MAX_LIMIT = 7.50
 HOME_OFFSET = 0.0
+HOME_SEQUENCE = 1
 #******************************************
 
 #******************************************
@@ -155,5 +155,6 @@ STEP_SCALE = -32000
 MIN_LIMIT = -5.000
 MAX_LIMIT = 5.0
 HOME_OFFSET = 0.0
+HOME_SEQUENCE = 0
 #******************************************
 
