updates from threading experiments

--- a/Shoptask1720/Shoptask1720.ini
+++ b/Shoptask1720/Shoptask1720.ini
@@ -42,6 +42,8 @@ TASK = milltask
 CYCLE_TIME = 0.010
 
 [RS274NGC]
+#RS274NGC_STARTUP_CODE = G18 G20 G40 G49 G64 P0.001 G80 G90 G92 G94 G97 G98 G7
+RS274NGC_STARTUP_CODE = G18 G20 G40 G49 G64 P0.001 G80 G90 G94 G97 G98 G7
 PARAMETER_FILE = linuxcnc.var
 
 [EMCMOT]
@@ -158,3 +160,5 @@ HOME_OFFSET = 0.0
 HOME_SEQUENCE = 0
 #******************************************
 
+[MACROS]
+MACRO=turning Finish_Diameter SFM DOC FPR Finish_Length Radius Angle Tool_Number
