Switch to lathe

--- a/Shoptask1720/Shoptask1720.ini
+++ b/Shoptask1720/Shoptask1720.ini
@@ -115,6 +115,7 @@ STEP_SCALE = -32000
 MIN_LIMIT = -8.00
 MAX_LIMIT = 8.0
 HOME_OFFSET = 0.0
+HOME_SEQUENCE = 0
 #******************************************
 
 #******************************************
@@ -154,6 +155,7 @@ STEP_SCALE = 32000
 MIN_LIMIT = -8.000
 MAX_LIMIT = 8.0
 HOME_OFFSET = 0.0
+HOME_SEQUENCE = 1
 #******************************************
 
 #******************************************
@@ -193,4 +195,5 @@ STEP_SCALE = -21333.33
 MIN_LIMIT = -3.1
 MAX_LIMIT = 0.001
 HOME_OFFSET = 0.0
+HOME_SEQUENCE = 2
 #******************************************
