--- a/Shoptask1720/Shoptask1720.ini
+++ b/Shoptask1720/Shoptask1720.ini
@@ -57,8 +57,12 @@ CARD0=hm2_7i76e.0
 HALUI = halui
 HALFILE = Shoptask1720.hal
 HALFILE = custom.hal
+HALFILE = LIB:xhc-hb04.tcl
 POSTGUI_HALFILE = postgui_call_list.hal
 SHUTDOWN = shutdown.hal
+
+[APPLICATIONS]
+APP = monitor-xhc-hb04
 
 [HALUI]
 
@@ -197,3 +201,22 @@ MAX_LIMIT = 0.001
 HOME_OFFSET = 0.0
 HOME_SEQUENCE = 2
 #******************************************
+
+[XHC_HB04_CONFIG]
+threadname = servo-thread
+layout     = 2
+coords     = x y z
+coefs      = 1 1 1
+mpg_accels = 1 2 2
+scales     = 1 1 1
+require_pendant = yes
+inch_or_mm = mm
+jogmode    = normal
+sequence   = 1
+
+[XHC_HB04_BUTTONS]
+#reset = not.xb-estop.in
+reset = halui.estop.activate
+start-pause = std_start_pause
+rewind      = halui.program.step
+spindle     = edge.xb-spindle.in
