xhc-hb04 more buttons and fixed display metric

--- a/Shoptask1720/Shoptask1720.ini
+++ b/Shoptask1720/Shoptask1720.ini
@@ -62,9 +62,23 @@ POSTGUI_HALFILE = postgui_call_list.hal
 SHUTDOWN = shutdown.hal
 
 [APPLICATIONS]
+APP = halunits.py
 APP = monitor-xhc-hb04
 
 [HALUI]
+MDI_COMMAND = G53 G0 X0
+MDI_COMMAND = G53 G0 Y0
+MDI_COMMAND = G53 G0 Z0
+MDI_COMMAND = G53 G0 X0 Y0 Z0
+MDI_COMMAND = G10 L20 P0 X[#<_x>/2.0]
+MDI_COMMAND = G10 L20 P0 Y[#<_y>/2.0]
+MDI_COMMAND = G10 L20 P0 Z[#<_z>/2.0]
+MDI_COMMAND = G10 L20 P0 X0
+MDI_COMMAND = G10 L20 P0 Y0
+MDI_COMMAND = G10 L20 P0 Z0
+# 10 set Z to 0.025 for tool setting
+# inch mode only
+MDI_COMMAND = G10 L20 P0 Z0.025
 
 [KINS]
 JOINTS = 3
@@ -215,8 +229,21 @@ jogmode    = normal
 sequence   = 1
 
 [XHC_HB04_BUTTONS]
-#reset = not.xb-estop.in
 reset = halui.estop.activate
 start-pause = std_start_pause
 rewind      = halui.program.step
+stop        = halui.program.stop
 spindle     = edge.xb-spindle.in
+goto-zero-x = halui.mdi-command-00
+goto-zero-y = halui.mdi-command-01
+goto-zero-z = halui.mdi-command-02
+goto-zero-a = halui.mdi-command-03
+half-x = halui.mdi-command-04
+half-y = halui.mdi-command-05
+half-z = halui.mdi-command-06
+zero-x = halui.mdi-command-07
+zero-y = halui.mdi-command-08
+zero-z = halui.mdi-command-09
+macro-1 = halui.mdi-command-10
+home = halui.home-all
+step = xhc-hb04.stepsize-up
