Finish pendant add for mill

--- a/Shoptask1720/Shoptask1720.ini
+++ b/Shoptask1720/Shoptask1720.ini
@@ -100,8 +100,8 @@ TOOL_TABLE = tool.tbl
 [AXIS_X]
 MAX_VELOCITY = 0.5
 MAX_ACCELERATION = 6.0
-MIN_LIMIT = -8.000
-MAX_LIMIT =11.0
+MIN_LIMIT = -0.020 
+MAX_LIMIT = 9.9
 
 [JOINT_0]
 TYPE = LINEAR
@@ -130,8 +130,8 @@ DIRHOLD    = 10000
 STEPLEN    = 5000
 STEPSPACE  = 5000
 STEP_SCALE = -32000
-MIN_LIMIT = -8.00
-MAX_LIMIT = 11.0
+MIN_LIMIT = -0.02
+MAX_LIMIT = 9.9
 HOME_OFFSET = 0.0
 HOME_SEQUENCE = 0
 #******************************************
@@ -222,13 +222,14 @@ layout     = 2
 coords     = x y z
 coefs      = 1 1 1
 mpg_accels = 1 2 2
-scales     = 1 1 1
+scales     = 0.2 0.2 0.2
 require_pendant = yes
-inch_or_mm = mm
-jogmode    = normal
-sequence   = 1
+inch_or_mm = inch
+jogmode    = vnormal
+sequence   = 4
 
 [XHC_HB04_BUTTONS]
+home = halui.home-all
 reset = halui.estop.activate
 start-pause = std_start_pause
 rewind      = halui.program.step
@@ -245,5 +246,5 @@ zero-x = halui.mdi-command-07
 zero-y = halui.mdi-command-08
 zero-z = halui.mdi-command-09
 macro-1 = halui.mdi-command-10
-home = halui.home-all
+#home = halui.home-all
 step = xhc-hb04.stepsize-up
