--- a/Shoptask1720/Shoptask1720.ini
+++ b/Shoptask1720/Shoptask1720.ini
@@ -57,10 +57,28 @@ CARD0=hm2_7i76e.0
 HALUI = halui
 HALFILE = Shoptask1720.hal
 HALFILE = custom.hal
+HALFILE = LIB:xhc-hb04.tcl
 POSTGUI_HALFILE = postgui_call_list.hal
 SHUTDOWN = shutdown.hal
 
+[APPLICATIONS]
+APP = halunits.py
+APP = monitor-xhc-hb04
+
 [HALUI]
+MDI_COMMAND = G53 G0 X0
+MDI_COMMAND = G53 G0 Y0
+MDI_COMMAND = G53 G0 Z0
+MDI_COMMAND = G53 G0 X0 Y0 Z0
+MDI_COMMAND = G10 L20 P0 X[#<_x>/2.0]
+MDI_COMMAND = G10 L20 P0 Y[#<_y>/2.0]
+MDI_COMMAND = G10 L20 P0 Z[#<_z>/2.0]
+MDI_COMMAND = G10 L20 P0 X0
+MDI_COMMAND = G10 L20 P0 Y0
+MDI_COMMAND = G10 L20 P0 Z0
+# 10 set Z to 0.025 for tool setting
+# inch mode only
+MDI_COMMAND = G10 L20 P0 Z0.025
 
 [KINS]
 JOINTS = 3
@@ -82,8 +100,8 @@ TOOL_TABLE = tool.tbl
 [AXIS_X]
 MAX_VELOCITY = 0.5
 MAX_ACCELERATION = 6.0
-MIN_LIMIT = -8.000
-MAX_LIMIT =11.0
+MIN_LIMIT = -0.020 
+MAX_LIMIT = 9.9
 
 [JOINT_0]
 TYPE = LINEAR
@@ -112,8 +130,8 @@ DIRHOLD    = 10000
 STEPLEN    = 5000
 STEPSPACE  = 5000
 STEP_SCALE = -32000
-MIN_LIMIT = -8.00
-MAX_LIMIT = 11.0
+MIN_LIMIT = -0.02
+MAX_LIMIT = 9.9
 HOME_OFFSET = 0.0
 HOME_SEQUENCE = 0
 #******************************************
@@ -197,3 +215,36 @@ MAX_LIMIT = 0.001
 HOME_OFFSET = 0.0
 HOME_SEQUENCE = 2
 #******************************************
+
+[XHC_HB04_CONFIG]
+threadname = servo-thread
+layout     = 2
+coords     = x y z
+coefs      = 1 1 1
+mpg_accels = 1 2 2
+scales     = 0.2 0.2 0.2
+require_pendant = yes
+inch_or_mm = inch
+jogmode    = vnormal
+sequence   = 4
+
+[XHC_HB04_BUTTONS]
+home = halui.home-all
+reset = halui.estop.activate
+start-pause = std_start_pause
+rewind      = halui.program.step
+stop        = halui.program.stop
+spindle     = edge.xb-spindle.in
+goto-zero-x = halui.mdi-command-00
+goto-zero-y = halui.mdi-command-01
+goto-zero-z = halui.mdi-command-02
+goto-zero-a = halui.mdi-command-03
+half-x = halui.mdi-command-04
+half-y = halui.mdi-command-05
+half-z = halui.mdi-command-06
+zero-x = halui.mdi-command-07
+zero-y = halui.mdi-command-08
+zero-z = halui.mdi-command-09
+macro-1 = halui.mdi-command-10
+#home = halui.home-all
+step = xhc-hb04.stepsize-up
