--- a/Shoptask1720/Shoptask1720.ini
+++ b/Shoptask1720/Shoptask1720.ini
@@ -59,10 +59,28 @@ CARD0=hm2_7i76e.0
 HALUI = halui
 HALFILE = Shoptask1720.hal
 HALFILE = custom.hal
+HALFILE = LIB:xhc-hb04.tcl
 POSTGUI_HALFILE = postgui_call_list.hal
 SHUTDOWN = shutdown.hal
 
+[APPLICATIONS]
+APP = halunits.py
+APP = monitor-xhc-hb04
+
 [HALUI]
+MDI_COMMAND = G53 G0 X0
+MDI_COMMAND = G53 G0 Y0
+MDI_COMMAND = G53 G0 Z0
+MDI_COMMAND = G53 G0 X0 Y0 Z0
+MDI_COMMAND = G10 L20 P0 X[#<_x>/2.0]
+MDI_COMMAND = G10 L20 P0 Y[#<_y>/2.0]
+MDI_COMMAND = G10 L20 P0 Z[#<_z>/2.0]
+MDI_COMMAND = G10 L20 P0 X0
+MDI_COMMAND = G10 L20 P0 Y0
+MDI_COMMAND = G10 L20 P0 Z0
+# 10 set Z to 0.025 for tool setting
+# inch mode only
+MDI_COMMAND = G10 L20 P0 Z0.025
 
 [KINS]
 JOINTS = 2
@@ -162,3 +180,34 @@ HOME_SEQUENCE = 0
 
 [MACROS]
 MACRO=turning Finish_Diameter SFM DOC FPR Finish_Length Radius Angle Tool_Number
+
+[XHC_HB04_CONFIG]
+threadname = servo-thread
+layout     = 2
+coords     = x z
+coefs      = 1 1
+mpg_accels = 1 2
+scales     = 0.2 0.2
+require_pendant = yes
+inch_or_mm = inch
+jogmode    = vnormal
+sequence   = 4
+
+[XHC_HB04_BUTTONS]
+home = halui.home-all
+reset = halui.estop.activate
+start-pause = std_start_pause
+rewind      = halui.program.step
+stop        = halui.program.stop
+spindle     = edge.xb-spindle.in
+goto-zero-x = halui.mdi-command-00
+goto-zero-y = halui.mdi-command-01
+goto-zero-a = halui.mdi-command-03
+half-x = halui.mdi-command-04
+half-y = halui.mdi-command-05
+half-z = halui.mdi-command-06
+zero-x = halui.mdi-command-07
+zero-z = halui.mdi-command-09
+macro-1 = halui.mdi-command-10
+#home = halui.home-all
+step = xhc-hb04.stepsize-up
