tweaks for pendant and tool table updates

--- a/Shoptask1720/Shoptask1720.ini
+++ b/Shoptask1720/Shoptask1720.ini
@@ -71,7 +71,7 @@ APP = monitor-xhc-hb04
 MDI_COMMAND = G53 G0 X0
 MDI_COMMAND = G53 G0 Y0
 MDI_COMMAND = G53 G0 Z0
-MDI_COMMAND = G53 G0 X0 Y0 Z0
+MDI_COMMAND = G53 G0 X0 Z0
 MDI_COMMAND = G10 L20 P0 X[#<_x>/2.0]
 MDI_COMMAND = G10 L20 P0 Y[#<_y>/2.0]
 MDI_COMMAND = G10 L20 P0 Z[#<_z>/2.0]
@@ -201,10 +201,9 @@ rewind      = halui.program.step
 stop        = halui.program.stop
 spindle     = edge.xb-spindle.in
 goto-zero-x = halui.mdi-command-00
-goto-zero-y = halui.mdi-command-01
+goto-zero-z = halui.mdi-command-02
 goto-zero-a = halui.mdi-command-03
 half-x = halui.mdi-command-04
-half-y = halui.mdi-command-05
 half-z = halui.mdi-command-06
 zero-x = halui.mdi-command-07
 zero-z = halui.mdi-command-09
