mpg tweaks and tool table updates

--- a/Shoptask1720/Shoptask1720.ini
+++ b/Shoptask1720/Shoptask1720.ini
@@ -185,9 +185,9 @@ MACRO=turning Finish_Diameter SFM DOC FPR Finish_Length Radius Angle Tool_Number
 threadname = servo-thread
 layout     = 2
 coords     = x z
-coefs      = 1 1
-mpg_accels = 1 2
-scales     = 0.2 0.2
+coefs      = 1 1 1
+mpg_accels = 1 1 1
+scales     = 0.2 0.2 0.2
 require_pendant = yes
 inch_or_mm = inch
 jogmode    = vnormal
