Added axisfree panel for finishing passes

--- a/Shoptask1720/Shoptask1720.ini
+++ b/Shoptask1720/Shoptask1720.ini
@@ -28,6 +28,9 @@ MAX_ANGULAR_VELOCITY = 180.000000
 MIN_ANGULAR_VELOCITY = 1.666667
 EDITOR = gedit
 GEOMETRY = xyz
+EMBED_TAB_NAME=axisfree
+EMBED_TAB_LOCATION=box_custom_4
+EMBED_TAB_COMMAND = gladevcp -x {XID} -H axisfree.hal axisfree.glade
 
 [FILTER]
 PROGRAM_EXTENSION = .png,.gif,.jpg Greyscale Depth Image
