add MPG mode button

--- a/Shoptask1720/Shoptask1720.ini
+++ b/Shoptask1720/Shoptask1720.ini
@@ -203,6 +203,7 @@ start-pause = std_start_pause
 rewind      = halui.program.step
 stop        = halui.program.stop
 spindle     = edge.xb-spindle.in
+mode        = halui.mode.manual
 goto-zero-x = halui.mdi-command-00
 goto-zero-z = halui.mdi-command-02
 goto-zero-a = halui.mdi-command-03
