added home switches

--- a/Shoptask1720/Shoptask1720.ini
+++ b/Shoptask1720/Shoptask1720.ini
@@ -103,8 +103,8 @@ TOOL_TABLE = tool.tbl
 [AXIS_X]
 MAX_VELOCITY = 0.5
 MAX_ACCELERATION = 6.0
-MIN_LIMIT = -2.0
-MAX_LIMIT = 9.9
+MIN_LIMIT = -4.8
+MAX_LIMIT = 5.1
 
 [JOINT_0]
 TYPE = LINEAR
@@ -133,17 +133,20 @@ DIRHOLD    = 10000
 STEPLEN    = 5000
 STEPSPACE  = 5000
 STEP_SCALE = -32000
-MIN_LIMIT = -2.0
-MAX_LIMIT = 9.9
-HOME_OFFSET = 0.0
-HOME_SEQUENCE = 0
+MIN_LIMIT = -4.8
+MAX_LIMIT = 5.1
+HOME_OFFSET = 5.0
+HOME_SEQUENCE = 1
+HOME_SEARCH_VEL = 0.5
+HOME_LATCH_VEL = -0.01
+HOME_FINAL_VEL = 0.5
 #******************************************
 
 #******************************************
 [AXIS_Y]
 MAX_VELOCITY = 0.5
 MAX_ACCELERATION = 4.0
-MIN_LIMIT = -8.000
+MIN_LIMIT = -6.600
 MAX_LIMIT = 8.0
 
 [JOINT_1]
@@ -173,10 +176,13 @@ DIRHOLD    = 10000
 STEPLEN    = 5000
 STEPSPACE  = 5000
 STEP_SCALE = 32000
-MIN_LIMIT = -8.000
+MIN_LIMIT = -6.600
 MAX_LIMIT = 8.0
-HOME_OFFSET = 0.0
-HOME_SEQUENCE = 1
+HOME_OFFSET = 1.0
+HOME_SEQUENCE = 2
+HOME_SEARCH_VEL = 0.5
+HOME_LATCH_VEL = -0.01
+HOME_FINAL_VEL = 0.5
 #******************************************
 
 #******************************************
@@ -214,9 +220,13 @@ STEPLEN    = 5000
 STEPSPACE  = 5000
 STEP_SCALE = -21333.33
 MIN_LIMIT = -3.1
-MAX_LIMIT = 0.001
-HOME_OFFSET = 0.0
-HOME_SEQUENCE = 2
+MAX_LIMIT = 0.01
+HOME_SEQUENCE = 0
+HOME_OFFSET = -0.05
+HOME_SEARCH_VEL = 0.5
+HOME_LATCH_VEL = -0.01
+HOME_FINAL_VEL = 0.1
+#******************************************
 #******************************************
 
 [XHC_HB04_CONFIG]
