--- a/Shoptask1720/Shoptask1720.ini
+++ b/Shoptask1720/Shoptask1720.ini
@@ -105,8 +105,8 @@ TOOL_TABLE = tool.tbl
 [AXIS_Z]
 MAX_VELOCITY = 0.5
 MAX_ACCELERATION = 4.0
-MIN_LIMIT = -8.5000
-MAX_LIMIT = 7.50
+MIN_LIMIT = -6.600
+MAX_LIMIT = 8.0
 
 [JOINT_1]
 TYPE = LINEAR
@@ -135,18 +135,21 @@ DIRHOLD    = 10000
 STEPLEN    = 5000
 STEPSPACE  = 5000
 STEP_SCALE = 32000
-MIN_LIMIT = -8.50
-MAX_LIMIT = 7.50
-HOME_OFFSET = 0.0
-HOME_SEQUENCE = 1
+MIN_LIMIT = -6.600
+MAX_LIMIT = 8.0
+HOME_OFFSET = 1.0
+HOME_SEQUENCE = 2
+HOME_SEARCH_VEL = 0.5
+HOME_LATCH_VEL = -0.01
+HOME_FINAL_VEL = 0.5
 #******************************************
 
 #******************************************
 [AXIS_X]
 MAX_VELOCITY = 0.5
 MAX_ACCELERATION = 4.0
-MIN_LIMIT = -5.000
-MAX_LIMIT = 5.0
+MIN_LIMIT = -4.8
+MAX_LIMIT = 5.1
 
 [JOINT_0]
 TYPE = LINEAR
@@ -175,10 +178,13 @@ DIRHOLD    = 10000
 STEPLEN    = 5000
 STEPSPACE  = 5000
 STEP_SCALE = -32000
-MIN_LIMIT = -5.000
-MAX_LIMIT = 5.0
-HOME_OFFSET = 0.0
-HOME_SEQUENCE = 0
+MIN_LIMIT = -4.8
+MAX_LIMIT = 5.1
+HOME_OFFSET = 5.0
+HOME_SEQUENCE = 1
+HOME_SEARCH_VEL = 0.5
+HOME_LATCH_VEL = -0.01
+HOME_FINAL_VEL = 0.5
 #******************************************
 
 [MACROS]
