--- a/Shoptask1720/Shoptask1720.ini
+++ b/Shoptask1720/Shoptask1720.ini
@@ -46,6 +46,8 @@ CYCLE_TIME = 0.010
 
 [RS274NGC]
 PARAMETER_FILE = linuxcnc.var
+SUBROUTINE_PATH = macros
+REMAP=M6    modalgroup=6 ngc=tool-change
 
 [EMCMOT]
 EMCMOT = motmod
@@ -98,6 +100,8 @@ MAX_LINEAR_VELOCITY = 0.75
 EMCIO = io
 CYCLE_TIME = 0.100
 TOOL_TABLE = tool.tbl
+TOOL_CHANGE_AT_G30 = 0
+
 
 #******************************************
 [AXIS_X]
